# Sensitive-Data-Detection-Compliance-Assistant

./: README.md  main.py  pyproject.toml  requirements.txt
Sensitive_Data_Compliance_Assistant/: README.md  app.py  config.py  detector.py  document_parser.py  ocr.py  qa.py  rag.py  redactor.py  requirements.txt  risk.py  summary.py  utils.py
Sensitive_Data_Compliance_Assistant/logs/: audit_logs.db
Sensitive_Data_Compliance_Assistant/uploads/: 1fa111e0-35bb-467d-b582-5a0156156221_==============================.txt
