[project]
name = "sensitive-data-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "numpy>=2.3.5",
    "openai>=2.44.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "plotly>=6.8.0",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
